# sindy-feature-extensions

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: pendulum_trig_vs_poly.py  vanderpol_sindy_cvstlsq.py
src/sindy_feat_ext/: __init__.py  derivatives.py  leakage.py  libraries.py  sparsify.py  utils.py
tests/: test_derivatives.py  test_leakage.py  test_libraries.py  test_sparsify.py
