[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sindy-feature-extensions"
version = "0.1.0"
description = "Feature libraries, derivative estimators, and CV sparse regression for SINDy workflows"
readme = "README.md"
authors = [{name = "emagnon"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pre-commit",
  "pylint",
  "black",
  "isort",
  "mypy",
  "matplotlib",
  "pysindy>=1.7; python_version>='3.9'",
  "tvregdiff; python_version>='3.9'",
]

[tool.setuptools.package-dir]
= "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
