[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sindy-feature-extensions"
version = "0.1.1"
description = "Feature libraries, derivative estimators, and CV sparse regression for SINDy workflows"
readme = "README.md"
authors = [{name = "emagnon"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pre-commit",
  "black",
  "isort",
  "flake8",
  "matplotlib",
]
examples = [
  "pysindy>=1.7",
]
tvreg = [
  "tvregdiff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sindy_feat_ext*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.ruff]
line-length = 100
select = ["E", "W", "I"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
